--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Bienvenue sur Ma Application Node.js !</h1>
     <p>Voici ma superbe application Node.js déployée sur Netlify.</p>
-    <p>Vous pouvez consulter la <a href="/product-description">description du produit</a> ou <a href="/update-product-description">mettre à jour la description du produit</a>.</p>
+    <p>Vous pouvez consulter la <a href="/server.js">description du produit</a> ou <a href="/update-product-description">mettre à jour la description du produit</a>.</p>
 </body>
 </html>
