--- a/product-description.html
+++ b/product-description.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +16,7 @@
         $(document).ready(function() {
             // Récupérer la description du produit depuis le serveur
             $.ajax({
-                url: 'https://tuto-imprimeur.fr/wp-json/wc/v3/products/16', // L'URL de l'API pour récupérer la description du produit
+                url: '/product-description', // Endpoint pour récupérer la description du produit
                 method: 'GET',
                 success: function(response) {
                     $('#product-description').html(response.description);
